@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-08-21T01:06:12Z",
-  "count_outdated" : 235,
-  "uniques_outdated" : 169,
+  "timestamp" : "2024-08-30T01:09:35Z",
+  "count_outdated" : 237,
+  "uniques_outdated" : 171,
   "count" : 238,
   "uniques" : 172,
   "clones" : [
-    {
-      "timestamp": "2024-08-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-08-20T00:00:00Z",
       "count": 1,
